crude orbis sigil